# bloomsolution

./: .gitignore  CMakeLists.txt  README.md  bloom.cpp  bloom.hpp  hash.cpp  hash.hpp  kmer.cpp  kmer.hpp  main.cpp  seq_reader.cpp  seq_reader.hpp
data/: test.fasta
